tests/fixtures/invalid/void_pointer_parameter.c
int consume(void *slot) {
    return 0;
}
